--- a/expressServer/package.json
+++ b/expressServer/package.json
@@ -4,6 +4,7 @@
     "@types/express": "^4.17.21",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "firebase-admin": "^12.0.0",
     "typescript": "^5.3.3"
   },
   "name": "expressserver",
