--- a/client/Kanji-React-Frontend/package.json
+++ b/client/Kanji-React-Frontend/package.json
@@ -13,8 +13,7 @@
     "firebase": "^10.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2",
-    "wanakana": "^5.3.1"
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
