--- a/client/Kanji-React-Frontend/package.json
+++ b/client/Kanji-React-Frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@namhong2001/react-textfit": "^2.0.0",
     "firebase": "^10.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
